[project]
name = "flashback-bot"
version = "0.2.0"
description = "Telegram bot that sends a daily random photo at a surprise time"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "pytz>=2024.1",
]

[project.scripts]
flashback = "flashback_bot.main:main"
